syntax = "proto3";
option go_package = ".;proto";

//Generate proto file command
//python -m grpc_tools.protoc --python_out=. --grpc_python_out=. -I. message.proto

service Message{
    rpc MessageList(MessageRequest) returns(MessageListResponse); //批量获取留言信息
    rpc CreateMessage(MessageRequest) returns(MessageResponse); //添加留言
}

message MessageRequest{
    int32 id = 1;
    int32 userId = 2;
    int32 messageType = 3;
    string subject = 4;
    string message = 5;
    string file = 6;
}

message  MessageResponse{
    int32 id = 1;
    int32 userId = 2;
    int32 messageType = 3;
    string subject = 4;
    string message = 5;
    string file = 6;
}

message MessageListResponse {
    int32 total = 1;
    repeated MessageResponse data = 2;
}
